Fix GitHub Actions workflow - use github.event.inputs for workflow_dispatch

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,8 +43,8 @@ jobs:
     runs-on: ${{ matrix.os }}
     if: >-
       github.event_name == 'push' ||
-      inputs.platform == 'all' ||
-      inputs.platform == matrix.name
+      github.event.inputs.platform == 'all' ||
+      github.event.inputs.platform == matrix.name
     
     steps:
       - name: Checkout
