--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,13 +42,22 @@ jobs:
 
     runs-on: ${{ matrix.os }}
     
-    # Skip entire job if platform doesn't match (workflow_dispatch only)
-    if: |
-      github.event_name == 'push' ||
-      github.event.inputs.platform == 'all' ||
-      github.event.inputs.platform == matrix.name
-    
     steps:
+      - name: Check platform filter
+        id: filter
+        shell: bash
+        run: |
+          if [[ "${{ github.event_name }}" == "push" ]]; then
+            echo "skip=false" >> $GITHUB_OUTPUT
+          elif [[ "${{ github.event.inputs.platform }}" == "all" ]]; then
+            echo "skip=false" >> $GITHUB_OUTPUT
+          elif [[ "${{ github.event.inputs.platform }}" == "${{ matrix.name }}" ]]; then
+            echo "skip=false" >> $GITHUB_OUTPUT
+          else
+            echo "skip=true" >> $GITHUB_OUTPUT
+          fi
+          echo "Platform filter: input=${{ github.event.inputs.platform }}, matrix=${{ matrix.name }}, skip=$(cat $GITHUB_OUTPUT | grep skip | cut -d= -f2)"
+
       - name: Checkout
         if: steps.filter.outputs.skip == 'false'
         uses: actions/checkout@v4
@@ -69,32 +78,25 @@ jobs:
         if: steps.filter.outputs.skip == 'false'
         run: go install github.com/wailsapp/wails/v2/cmd/wails@latest
 
-      # Linux dependencies (Wails v2 requires webkit2gtk-4.0, only available on Ubuntu 20.04)
       - name: Install Linux Dependencies
         if: steps.filter.outputs.skip == 'false' && startsWith(matrix.os, 'ubuntu')
         run: |
           sudo apt-get update
           sudo apt-get install -y libgtk-3-dev libwebkit2gtk-4.0-dev
 
-      # Build
       - name: Build
         if: steps.filter.outputs.skip == 'false'
         run: wails build -platform ${{ matrix.platform }} -o ${{ matrix.output }}
 
-      # Package macOS .app to zip
       - name: Package macOS App
         if: steps.filter.outputs.skip == 'false' && startsWith(matrix.os, 'macos')
         run: |
           cd build/bin
-          # Wails creates .app bundle, zip it for distribution
-          if [ -d "*.app" ] || [ -d "${{ matrix.output }}.app" ]; then
-            zip -r ${{ matrix.output }}.zip *.app
-          elif [ -d "SurfManager.app" ]; then
+          if [ -d "SurfManager.app" ]; then
             mv SurfManager.app ${{ matrix.output }}.app
             zip -r ${{ matrix.output }}.zip ${{ matrix.output }}.app
           fi
 
-      # Upload artifact - Windows/Linux
       - name: Upload Artifact (Windows/Linux)
         if: steps.filter.outputs.skip == 'false' && !startsWith(matrix.os, 'macos')
         uses: actions/upload-artifact@v4
@@ -102,7 +104,6 @@ jobs:
           name: ${{ matrix.output }}
           path: build/bin/${{ matrix.output }}*
 
-      # Upload artifact - macOS
       - name: Upload Artifact (macOS)
         if: steps.filter.outputs.skip == 'false' && startsWith(matrix.os, 'macos')
         uses: actions/upload-artifact@v4
